Grease Pencil: Secondary strokes get terminated early when drawing in Continuous Drawing mode #44259

Closed
opened 2015-04-04 12:46:22 +02:00 by Joshua Leung · 8 comments
Member

System Information
Windows 8.1, 64-bit
Tested with Logitec G400s mouse

Blender Version
Broken: After Sticky Keys commit
Worked: (optional)

There seem to be two variations of these problems :/

Version 1:
When trying to draw strokes using Grease Pencil with the "Continuous Drawing" (sketching sessions) toggle enabled, the first stroke still works as expected, but all subsequent strokes will be abruptly cut off.

That is, it seems to work normally for ~300-1000 ms, before something in the event handling internals things that the mouse-held state is no longer needed/valid, and either sends a mouse-released OR just stops sending mouse moved events. The result is that no further mouse movements get registered as needing to be added to that stroke.

  1. Enable "Continuous Drawing" from the toolbar (below the Grease Pencil Drawing operators)
  2. Hold DKEY, then press+hold down the LMB and start scribbling a long squiggle for several seconds.
  3. Release DKEY and LMB together
  4. Press+hold down the LMB again, and start slowly dragging the mouse diagonally. <-- Notice how for < 1 second initially, everything seems fine working, but then the stroke stops growing even as the mouse moves.
  5. Release the LMB. <--- Apart from the cursor changing back to normal, the stroke does no get any longer.
  6. Repeat steps 4 and 5, and note how the same thing happens each time. It appears that the length of the stroke that does register depends on the speed with which you move the mouse only.

Version 2:
Again, this is with "Continuous Drawing" enabled. In this case, the problem is a lot more sporadic.

  1. Hold down DKEY. Pause ~500ms - 2 seconds (NOTE: assume that even with those users with very agile reflexes cannot activate keys very quickly)
  2. Now, start trying to draw the stroke by holding down LMB. This is recognised as a single dot - i.e. press then instant release.
  3. Release LMB and Release DKEY. Either simultaneously, or with a delay. It doesn't seem to affect things.
  4. Go back to 1 and try again. Note the varying results.

EDIT: Upon further testing, this second case seems to be more predictable than I initially thought. It's merely a case of how quickly after pressing the DKEY the user starts to draw the stroke. "Almost immediately" works most of the time, but is not flawless. However, even the slightest hesitation, and it starts doing dots, or devolves into case 1. The key point probably is how long this initial pause lasts.

The problem here is that most users do not really have the agility to strike multiple keys at the kinds of intervals this requires. Also, many have gotten into the habit of doing (i.e. holding on to A continously, and often for a long gap before issuing the next keys/clicks)

**System Information** Windows 8.1, 64-bit Tested with Logitec G400s mouse **Blender Version** Broken: After Sticky Keys commit Worked: (optional) There seem to be two variations of these problems :/ **Version 1:** When trying to draw strokes using Grease Pencil with the "Continuous Drawing" (sketching sessions) toggle enabled, the first stroke still works as expected, but all subsequent strokes will be abruptly cut off. That is, it seems to work normally for ~300-1000 ms, before something in the event handling internals things that the mouse-held state is no longer needed/valid, and either sends a mouse-released OR just stops sending mouse moved events. The result is that no further mouse movements get registered as needing to be added to that stroke. 1. Enable "Continuous Drawing" from the toolbar (below the Grease Pencil Drawing operators) 2. Hold DKEY, then press+hold down the LMB and start scribbling a long squiggle for several seconds. 3. Release DKEY and LMB together 4. Press+hold down the LMB again, and start slowly dragging the mouse diagonally. <-- Notice how for < 1 second initially, everything seems fine working, but then the stroke stops growing even as the mouse moves. 5. Release the LMB. <--- Apart from the cursor changing back to normal, the stroke does no get any longer. 6. Repeat steps 4 and 5, and note how the same thing happens each time. It appears that the length of the stroke that does register depends on the speed with which you move the mouse only. **Version 2:** Again, this is with "Continuous Drawing" enabled. In this case, the problem is a lot more sporadic. 1. Hold down DKEY. Pause ~500ms - 2 seconds (NOTE: assume that even with those users with very agile reflexes cannot activate keys very quickly) 2. Now, start trying to draw the stroke by holding down LMB. This is recognised as a single dot - i.e. press then instant release. 3. Release LMB and Release DKEY. Either simultaneously, or with a delay. It doesn't seem to affect things. 4. Go back to 1 and try again. Note the varying results. EDIT: Upon further testing, this second case seems to be more predictable than I initially thought. It's merely a case of how quickly after pressing the DKEY the user starts to draw the stroke. "Almost immediately" works most of the time, but is not flawless. However, even the slightest hesitation, and it starts doing dots, or devolves into case 1. The key point probably is how long this initial pause lasts. The problem here is that most users do not really have the agility to strike multiple keys at the kinds of intervals this requires. Also, many have gotten into the habit of doing <A----------------><b--><c-><d> <A---------------> <A-----------><b> <A-----><b> (i.e. holding on to A continously, and often for a long gap before issuing the next keys/clicks)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Julian Eisel was assigned by Joshua Leung 2015-04-04 12:46:22 +02:00
Author
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

Added subscriber: @mont29

Added subscriber: @mont29
Member

Can confirm that here. I expected these kind of glitches, modal operations like this need to be a tiny little bit more careful in their event handling than without stickies. I tried to eliminate all the glitches I could find and I asked for testing early on (which even worked out quite well), but of course I can't test every tool in blender ;) That's also why I wanted to merge in Bcon1 if possible. Anyway, should be an easy fix, will have a look in an a bit.

Can confirm that here. I expected these kind of glitches, modal operations like this need to be a tiny little bit more careful in their event handling than without stickies. I tried to eliminate all the glitches I could find and I asked for testing early on (which even worked out quite well), but of course I can't test every tool in blender ;) That's also why I wanted to merge in Bcon1 if possible. Anyway, should be an easy fix, will have a look in an a bit.
Author
Member

Cool. Good luck and have fun tracking these down :P

Cool. Good luck and have fun tracking these down :P

This issue was referenced by 59df941ea5

This issue was referenced by 59df941ea57770250c59feeed4f7ce72bafd5b60
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 59df941ea5.

Closed by commit 59df941ea5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44259
No description provided.