Fix T44259: Secondary strokes get terminated early when drawing in Continuous Drawing mode